feat: departments crud
